<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingsDesign"
            type="com.bmprj.inotes.view.activity.SettingsActivity"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.SettingsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/toolbarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->settingsDesign.backClick()}"
                android:src="@drawable/back_white"
                android:contentDescription="TODO"
                tools:ignore="ContentDescription,HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsTitle"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modeOption"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

                <Switch
                    android:id="@+id/switchDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{()->settingsDesign.darkClick()}"
                    android:text="@string/switchDark"
                    tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                <Switch
                    android:id="@+id/switchLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{()->settingsDesign.lightClick()}"
                    android:text="@string/switchLight"
                    tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:onClick="@{()->settingsDesign.deleteClick()}"
                    android:text="@string/deleteAllNotes"
                    tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            </LinearLayout>



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>